# midipart

./: .gitignore  README.md  gunicorn_config.py  main.py  midipart-server.py  midipart.spec  pyproject.toml  requirements.txt
midipart/: main.py
midipart/src/: midi_analyzer.py  midi_functions.py
src/: main.py
src/main/: main.py
src/main/aux_functions/: midi_functions.py  notes.py
src/main/controller/: analyzer_controller.py
src/main/model/: midi_analyzer.py
src/main/service/: analyzer_service.py
