[project]
name = "midipart"
version = "1.0.0"
authors = [
  {name = "Alvaro", email = "example@example.com"},
]
readme = "README.md"

[project.scripts]
midipart = "midipart.main:app"

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"